[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 218.0
margin_right = 712.0
margin_bottom = 382.0
rect_min_size = Vector2( 400, 0 )

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 14.0
text = "Login to Server | Host Server"
align = 1

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 400.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.909804, 0.356863, 0.356863, 1 )
text = "[ Error ]"
align = 1
autowrap = true

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 20 )

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 164.0
columns = 2

[node name="UNLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 198.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Username"

[node name="UNInput" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Godette"
placeholder_text = "Godette"

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 198.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "IP Address"

[node name="IPInput" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_top = 28.0
margin_right = 400.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "localhost"
placeholder_text = "localhost"

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 198.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "Port"

[node name="PortInput" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_top = 56.0
margin_right = 400.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "8888"
placeholder_text = "8888"

[node name="ConnectBTN" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 84.0
margin_right = 198.0
margin_bottom = 104.0
text = "Connect"

[node name="HostBTN" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_top = 84.0
margin_right = 400.0
margin_bottom = 104.0
text = "Host"

[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/ConnectBTN" to="." method="_on_ConnectBTN_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/HostBTN" to="." method="_on_HostBTN_pressed"]
